--- a/css/style.css
+++ b/css/style.css
@@ -297,11 +297,13 @@ body {
   gap: 25px; }
 .image__box {
   width: 350px;
+  height: 350px;
   border: 2px solid #F73859;
   border-radius: 8px;
   transition: all .3s; }
   .image__box-img {
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
     border-radius: 8px; }
   .image__box:hover {
     transform: scale(1.1); }
