--- a/scss/image.scss
+++ b/scss/image.scss
@@ -10,11 +10,13 @@
     
     &__box {
         width: 350px;
+        height: 350px;
         border: 2px solid #F73859;
         border-radius: 8px;
         transition: all .3s;
         &-img {
-            max-width: 100%;
+            width: 100%;
+            height: 100%;
             border-radius: 8px;
         }
 
